# RecomBox

./: .gitignore  README.md  altstore.json  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  install.sh  pubspec.yaml  windows.nsi
lib/: main.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  test.rs
rust/src/api/: mod.rs  stream_video.rs
rust/src/method/: check_update.rs  current_watch.rs  generate_torrent_handle.rs  get_torrent_info.rs  get_torrent_metadata.rs  mod.rs  spawn_stream_server.rs
rust/src/method/download_provider/: add_download.rs  get_all_download.rs  get_download.rs  get_download_status.rs  mod.rs  remove_download.rs  set_download_status.rs
rust/src/method/favorite/: add_category.rs  delete_category.rs  get_all_category.rs  get_all_category_by_item_id.rs  get_all_item_by_category_id.rs  get_category_order.rs  get_last_watch_torrent.rs  is_in_category.rs  mod.rs  rename_category.rs  set_category.rs  set_last_watch_torrent.rs  swap_category_order.rs  unset_category.rs
rust/src/method/init/: init_rest_server.rs  init_settings.rs  init_torrent_session.rs  mod.rs
rust/src/method/metadata_provider/: featured_content.rs  mod.rs  search_content.rs  trending_content.rs  view_content.rs
rust/src/method/plugin_provider/: get_installed_plugins.rs  get_plugin_list.rs  get_sources.rs  get_torrents.rs  mod.rs
rust/src/utils/: download_file.rs  generate_torrent_handle.rs  get_torrent_info.rs  mod.rs  settings.rs  torrent_handle.rs  torrent_session.rs
rust/src/worker/: clean_download.rs  download.rs  mod.rs  update_plugins.rs
(+175 files in other folders)
